Use RandomizerProvider available through EasyRandomParameters to generate values in replacement of local instance of EasyRandom This should avoid recursive initialization